text overflow fix

--- a/assets/stylesheets/pages/_product.scss
+++ b/assets/stylesheets/pages/_product.scss
@@ -39,13 +39,14 @@
 
 	.ProdDesc {
 		text-align: left;
+    overflow: hidden; 
 	}
 
 	.ProdFeatures {
 		text-align: left;
 		list-style-type: square;
 		position:relative;
-		right: -20px;
+    margin-left: 20px;
 	}
 
 	.p {
